robot  Adding:hu,ru <leverage#94078>

--- a/wiki/leverage.wikitext
+++ b/wiki/leverage.wikitext
@@ -12,3 +12,6 @@
 #:''They plan to '''leverage''' the publicity they gained.''
 
 [[Category:English buzzwords]]
+
+[[hu:Leverage]]
+[[ru:Leverage]]
