robot  Adding:fr <liberalism#72083>

--- a/wiki/liberalism.wikitext
+++ b/wiki/liberalism.wikitext
@@ -5,4 +5,5 @@
 # A [[political]] [[movement]] founded on the [[autonomy]] and [[personal]] [[freedom]] of the [[individual]], [[progress]] and [[reform]], and [[government]] by [[law]] with the [[consent]] of the governed.
 # An [[economic]] theory in favour of [[laissez faire]] and the [[free market]].
 
+[[fr:liberalism]]
 [[it:liberalism]]
