robot  Adding:it <libation#94178>

--- a/wiki/libation.wikitext
+++ b/wiki/libation.wikitext
@@ -8,3 +8,5 @@ From the Latin ''[[libatio]]'' fr. ''[[libare]]'' "to take a little from anythin
 #* the act of [[pour]]ing a [[liquid]] or [[liquor]], usually [[wine]], either on the ground or on a [[victim]] in [[sacrifice]], in [[honor]] of some [[deity]]
 #* the wine or liquid thus poured out
 # a [[beverage]] especially an [[alcoholic]] one (often used humorously)
+
+[[it:libation]]
