robot  Adding:nl <libido#38790>

--- a/wiki/libido.wikitext
+++ b/wiki/libido.wikitext
@@ -18,5 +18,6 @@ From the Latin, ''[[libido]]'', "[[lust]]" or "[[desire]]". Used originally in [
 
 [[Category:Psychology]]
 
+[[nl:libido]]
 [[pl:Libido]]
 [[fi:Libido]]
