robot  Adding:nl <ligament#84576>

--- a/wiki/ligament.wikitext
+++ b/wiki/ligament.wikitext
@@ -4,3 +4,5 @@
 #(''anatomy'') [[band]] of strong [[tissue]] that holds the [[bone]]s of an animal in [[position]]
 ====Translations====
 *German: [[Band]] ''n'' (1)
+
+[[nl:ligament]]
