robot  Adding:it <lifeless#96674>

--- a/wiki/lifeless.wikitext
+++ b/wiki/lifeless.wikitext
@@ -6,3 +6,5 @@
 # [[uninhabited]], or [[incapable]] of [[supporting]] life
 # [[dull]] or [[lacking]] [[vitality]]
 [[category:English adjectives]]
+
+[[it:lifeless]]
