--- a/wiki/corpus.wikitext
+++ b/wiki/corpus.wikitext
@@ -24,6 +24,7 @@
 '''corpus''' (Plural: [[corpora]]) 3rd declension
 
 #the [[body]]
+#a collection of writings on a specific topic
 
 ====Derived terms====
 *[[corporalis]]
