robot  Adding:fr <lily of the valley#72851>

--- a/wiki/lily_of_the_valley.wikitext
+++ b/wiki/lily_of_the_valley.wikitext
@@ -3,3 +3,5 @@
 '''[[lily]] of the [[valley]]'''
 {{wikipedia}}
 # A [[flower]]ing [[plant]], ''Convallaria majalis'', with richly [[fragrant]] [[pendant]] [[bell]]s.
+
+[[fr:lily of the valley]]
