robot  Adding:it <links#31255>

--- a/wiki/links.wikitext
+++ b/wiki/links.wikitext
@@ -28,3 +28,5 @@
 # to the left: ''An der nächsten Ampel links abbiegen.''
 # the left-hand side: ''Wir gehen nach links.''
 [[Category:Scots derivations]]
+
+[[it:Links]]
