robot  Adding:fi,es <listen#5434>

--- a/wiki/listen.wikitext
+++ b/wiki/listen.wikitext
@@ -26,6 +26,9 @@
 ===See also===
 *[[hear]]
 
-[[it:listen]]
 [[Category:Communication]]
 [[Category:100 English basic words]]
+
+[[es:listen]]
+[[it:listen]]
+[[fi:Listen]]
