--- a/wiki/sex.wikitext
+++ b/wiki/sex.wikitext
@@ -1,37 +1,112 @@
 ==English==
 ===Pronunciation===
-*sĕks, /seks/, /<tt>seks</tt>/
+*sĕks, /sɛks/, /<tt>sEks</tt>/
 *:[[Rhymes:English:-ɛks|Rhymes: -ɛks]]
 
 ===Noun===
-'''sex''' ([[sexes]])
+'''sex''' (''[[countable]] and [[uncountable]]; plural'' '''[[sexes]]''')
 
-#[[gender]], being either [[male]] or [[female]]
+#(''countable'') The state of being either [[male]] or [[female]].
 #:''What '''sex''' is that hamster?''
-#act of [[sexual]] [[intercourse]] 
-#:''let's have '''sex'''''
-#:See also [[WikiSaurus:sexual intercourse]]
-#general sexual or related (activities)
+#:''battle of the '''sexes'''''
+#(''uncountable'') The act of [[sexual]] [[intercourse]].
+#:''Let's have '''sex'''.''
+#(''uncountable'') Activities related to sexual intercourse.
+#:''All you ever think about is sex.''
 #:'''''Sex''' and the City''
-#(rare) with ''the''- [[womankind]] in general
+#(''rare, uncountable:'' '''the sex''') [[Womankind]].
+
+====Synonyms====
+*(''state of being male or female''): [[gender]]
+*(''sexual intercourse''): [[sexual intercourse]]; ''see also'' [[WikiSaurus:sexual intercourse]]
+*(''activities related to sexual intercourse''):
+*(''womankind''): the [[fairer sex]], the [[weaker sex]], [[womankind]], [[women]]
 
 ====Translations====
+
+'''state of being male or female'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[sexe]] ''m''
+*Italian: [[sesso]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+'''sexual intercourse'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[sexe]] ''m''
+*Italian: [[sesso]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+'''activities related to sexual intercourse'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[sexe]] ''m''
+*Italian: [[sesso]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+'''womankind'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into
+the tables above.-->
+{{checktrans}}
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above, removing any numbers.  Any numbering associating
+translations with definitions is unreliable.
+
 *Bulgarian: [[пол]] ''m'' (1); [[секс]] ''m'' (2)
 *[[Breton]]: reizh (1, 2, 3)
 *Dutch: sex, [[seks]]
 *Finnish: [[sukupuoli]] (1); [[seksi]] (2)
-*French: [[sexe]] (1, 2)
 *German: [[Geschlecht]] ''n'' (1), Sex ''m'' (2, 3)
-*Hebrew: [[מין]] (Min) (1, 3), [[זן]] (Zan) (1), [[יחסי מין]] (Ya'kha'sey Min) (2), [[סקס]] (Sex) (3 - Slang, not formal)
+*Hebrew: [[מין]] (Min) (1, 3), [[זן]] (Zan) (1), [[יחסי מין]] (Ya'kha'sey Min) (2), [[סקס]] (Sex) (3 ''slang'')
 *Indonesian: [[seks]] (2), [[jenis]] [[kelamin]] (1)
 *{{ga}}: [[gneas]]
-*Italian: [[sesso]]
 *Norwegian: [[kjønn]] (1), sex (2, 3)
 *Polish: [[płeć]] ''f'' (1); [[seks]] ''m'' (2, 3)
 *Portuguese: [[sexo]]
 *Russian: [[пол]] ''m'' (1); [[секс]] ''m'' (2)
 *Slovak: [[pohlavie]] (1); [[sex#Slovak|sex]] (2, 3)
-*Spanish [[sexo]] ''m'' (1), (3); [[relaciones sexuales]] ''f pl.'' (2)
+*Spanish: [[sexo]] ''m'' (1), (3); [[relaciones sexuales]] ''f plural'' (2)
 *Swedish: [[kön]] (1), sex (2, 3)
 *Turkish: [[seks]] ''m'' (1); [[sevişme]] ''m'' (2)
 
@@ -46,38 +121,78 @@
 *Slovak: [[sexuálny]] ''m'', [[sexuálna]] ''f'', [[sexuálne]] ''n''
 *Swedish: [[sex-]]
 
-===Verb===
-'''to sex'''
+===Transitive verb===
+'''to sex''' ('''sexes''', '''sexing''', '''sexed''')
 
-#to determine the sex of
-#to have sex with someone (coll.)
+#To determine the sex of.
+#(''informal'') To have sex with.
 
 ====Translations====
+
+'''determine the sex of'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''informal: to have sex with'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into
+the tables above.-->
+{{checktrans}}
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above, removing any numbers.  Any numbering associating
+translations with definitions is unreliable.
+
 *Hebrew: [[להזדווג]]
 *Spanish: [[sexar]]
 
 ===Derived terms===
-*[[sex symbol]]
-*[[sex up]], [[sex-up]]
+*[[battle of the sexes]]
+*[[desex]]
 *[[sexiness]]
+*[[sex on legs]]
+*[[sex on a stick]]
+*[[sex shop]]
+*[[sex symbol]]
 *[[sexual]]
 *[[sexuality]]
+*[[sex up]]<!--verb-->
+*[[sex-up]]<!--this must be a noun, but what does it mean?-->
 *[[sexy]]
-*[[desex]]
 *[[unisex]]
 
+===See also===
+*[[sex-]]
+
 ----
-
 == Latin ==
+===Cardinal number===
+'''sex''' (''indeclinable'')
 
-=== Cardinal Number ===
-'''sex'''
-# [[Six]].
+#[[six]]
 
-====Declension====
-Indeclinable.
-
-=== Derived Words ===
+===Derived terms===
 *Italian: [[sei]]
 *Neapolitan: [[séje]]
 *Norwegian: [[seks]]
@@ -85,23 +200,23 @@ Indeclinable.
 *German: [[sechs]]
 
 ----
-
 == Slovak ==
 === Noun ===
-:'''sex''' ''m''
-: declension pattern [[Slovak declension pattern dub|dub]]
-# [[sex#English|sex]] (2, 3)
+'''sex''' ''m'' (''declension pattern'' [[Slovak declension pattern dub|dub]])
+
+#[[sex#English|sex]] (''intercourse, sexual activity'')
 
 ----
-
 ==Swedish==
 ===Noun===
 '''sex'''
-#act of [[sexual]] [[intercourse]] 
-#general sexual or related (activities )
 
-=== Cardinal Number ===
-# [[six]]
+#[[sex#English|sex]] (''intercourse, sexual activity'')
+
+=== Cardinal number ===
+'''sex'''
+
+#[[six]]
 
 ====Derived terms====
 *[[sexa]]
