--- a/wiki/sex.wikitext
+++ b/wiki/sex.wikitext
@@ -12,7 +12,7 @@
 #(''uncountable'') The act of [[sexual]] [[intercourse]].
 #:''Let's have '''sex'''.''
 #(''uncountable'') Activities related to sexual intercourse.
-#:''All you ever think about is sex.''
+#:''All you ever think about is '''sex'''.''
 #:'''''Sex''' and the City''
 #(''rare, uncountable:'' '''the sex''') [[Womankind]].
 
