robot  Adding:fr,fi <literature#63068>

--- a/wiki/literature.wikitext
+++ b/wiki/literature.wikitext
@@ -2,10 +2,11 @@
 ===Noun===
 # the body of written work
 
-[[it:literature]]
-
-
 ==== Translations ====
 *Chinese: [[文学]] (wén xué)
 * [[Italian]]: letteratura
 * [[Slovene]]: literatura
+
+[[fr:literature]]
+[[it:literature]]
+[[fi:Literature]]
