robot  Adding:et <livrer#1776>

--- a/wiki/livrer.wikitext
+++ b/wiki/livrer.wikitext
@@ -9,3 +9,5 @@
 *en: to [[deliver]] (1) , to [[give]] in (2)
 ===Thesaurus===
 [[emmener]], [[transporter]], [[déposer]], [[dénoncer]]
+
+[[et:Livrer]]
