robot  Adding:de,it <loner#93484>

--- a/wiki/loner.wikitext
+++ b/wiki/loner.wikitext
@@ -2,3 +2,6 @@
 ===Noun===
 '''loner'''
 #one who is [[alone]]; one who [[lack]]s or [[avoid]]s the [[company]] of others
+
+[[de:Loner]]
+[[it:loner]]
