robot  Adding:nl,it <loop#96649>

--- a/wiki/loop.wikitext
+++ b/wiki/loop.wikitext
@@ -33,3 +33,6 @@
 [[category:English nouns]]
 [[category:English transitive verbs]]
 [[category:English intransitive verbs]]
+
+[[it:loop]]
+[[nl:loop]]
