robot  Adding:es <look#5673>

--- a/wiki/look.wikitext
+++ b/wiki/look.wikitext
@@ -109,6 +109,8 @@
 
 [[Category:Communication]]
 
+[[Category:200 English basic words]]
+
+[[es:look]]
 [[it:look]]
 [[pt:Look]]
-[[Category:200 English basic words]]
