robot  Adding:es <lose#6249>

--- a/wiki/lose.wikitext
+++ b/wiki/lose.wikitext
@@ -143,4 +143,5 @@ The translations below need to be checked by native speakers and inserted into t
 
 #plural of [[Los]]
 
+[[es:lose]]
 [[it:lose]]
