fully-fledged entry (with special n meaning) <pointing#88420>

--- a/wiki/pointing.wikitext
+++ b/wiki/pointing.wikitext
@@ -1,1 +1,15 @@
-#REDIRECT [[point]]
+==English==
+===Verb form===
+'''pointing'''
+                                                                                
+#[[Present participle]] of '''to [[point]]'''.
+                                                                                
+===Verbal noun===
+'''pointing''' (''[[uncountable]]'')
+ 
+#The action of the verb '''to point'''.
+ 
+===Noun===
+'''pointing''' (''uncountable'')
+ 
+#[[Mortar]] that has been placed between [[brick]]s to hold them together.
