+English (ummm, and some other things moved around.) <corpus#38350>

--- a/wiki/corpus.wikitext
+++ b/wiki/corpus.wikitext
@@ -1,9 +1,17 @@
+==English==
+
+===Etymology===
+{{L.}} ''body''
+
 ===Noun===
-'''corpus''' (Plural: [[corpora]]/[[corpuses]])
+'''corpus''' (''plural:'' '''[[corpora]]'''/'''[[corpuses]]''')
+# the [[body]]
+# a collection of writings on a specific topic
 
-=='''Etymology'''==
-'''Latin''' "'''"body"'''"
-
+====Derived terms====
+*[[corporation]]
+*[[corporeal]]
+*[[corpulent]]
 
 ====Related terms====
 *[[corpus linguistics]]
@@ -22,9 +30,7 @@
 ==Latin==
 ===Noun===
 '''corpus''' (Plural: [[corpora]]) 3rd declension
-
-#the [[body]]
-#a collection of writings on a specific topic
+# see English above
 
 ====Derived terms====
 *[[corporalis]]
