robot  Adding:hu,it <lure#88742>

--- a/wiki/lure.wikitext
+++ b/wiki/lure.wikitext
@@ -14,3 +14,6 @@
 '''to lure'''  ([[lures]], [[lured]], [[luring]])
 # to attract by [[temptation]] etc.; to [[entice]]
 # to recall a hawk with a lure
+
+[[it:lure]]
+[[hu:Lure]]
