robot  Adding:de <lupe#85133>

--- a/wiki/lupe.wikitext
+++ b/wiki/lupe.wikitext
@@ -15,3 +15,5 @@
 '''lupe''' ''f plural'' (''singular'' '''[[lupa]]''')
 
 # (''feminine plural of [[lupo]]'') [[she-wolf|she-wolves]], female [[wolf|wolves]]
+
+[[de:Lupe]]
