robot  Adding:it <lymph#92343>

--- a/wiki/lymph.wikitext
+++ b/wiki/lymph.wikitext
@@ -9,3 +9,5 @@ From {{Gr.}} [[νυμφε]], ''water [[nymph]]'', via {{L.}} [[lympha]], ''water
 * [[nymph]]
 ====Translations====
 * Italian: [[lympha]]
+
+[[it:lymph]]
