--- a/wiki/%D1%82%D0%B0%D0%BC_%D0%B6%D0%B5.wikitext
+++ b/wiki/%D1%82%D0%B0%D0%BC_%D0%B6%D0%B5.wikitext
@@ -1,5 +1,6 @@
 ==Russian==
-<!-- part of speech? -->
-'''[[там]] [[же]]'''
+===Adverb===
+'''[[там]] [[же]]''' (tam že)
 
+# in the same place
 # [[ibid.]]
