robot  Adding:sv <lök#44653>

--- a/wiki/l%C3%B6k.wikitext
+++ b/wiki/l%C3%B6k.wikitext
@@ -6,3 +6,5 @@
 #the [[bulb]]shaped root portion of a plant such as a tulip, from which the rest of the plant may be regrown
 
 In case of cooking etc. it refers to ''[[gul lök]]'' ([[onion]])
+
+[[sv:lök]]
