fmt; more der; syns; translation tables; tabulated some translations; tidied fr: entry <point#1794>

--- a/wiki/point.wikitext
+++ b/wiki/point.wikitext
@@ -1,47 +1,192 @@
 ==English==
-
 ===Noun===
 '''point'''  (''plural'' '''[[points]]''')
-# A [[location]] or place.
-# An [[event]] which is dramatic or affirms something.
-# The sharp [[tip]] of an [[object]].
-# The name of the [[symbol]] '''.''' used to separate a whole number from a decimal fraction.
-#:''10.5'' (ten point five) = ten and a half.
-# An opinion which adds (or supposedly adds) to the [[discussion]].
-# (''games'') A nonformal unit of measure of [[success]] or [[failure]] in a [[game]]. 
-#:''The one with the most points will win the game''
-# the [[color]] on the [[extremities]] of an [[animal]] (typically [[dark]]er or [[rich]]er) than the rest of the [[coat]])
-#:''The point color of the cat was a deep, rich sable.'' 
-# {{Icehockey}} The [[stastistic]]al combination of [[goal]]s and [[assist]]s.
-#: The player had one goal and two assists for three points in that game.
 
-====Related terms====
-*[[pointer]]
-*[[pointy]]
+#A [[location]] or place.
+#A particular moment in an [[event]] or occurrence.
+#:''At this point in the meeting, I'd like to propose a new item for the agenda.''
+#The sharp [[tip]] of an [[object]].
+#(''arithmetic'') A [[decimal point]] (''used when reading decimal fractions aloud'').
+#:''10.5'' ("ten point five"; = ten and a half)
+#An opinion which adds (or supposedly adds) to the [[discussion]].
+#A unit of measure of [[success]] or [[failure]] in a [[game]] or [[competition]].
+#:''The one with the most points will win the game''
+#:''Germany awarded Greece the maximum 12 points in the Eurovision Song Contest.''
+#The [[color]]/[[colour]] on the [[extremities]] of an [[animal]] (typically [[dark]]er or [[rich]]er) than the rest of the [[coat]]).
+#:''The point color of the cat was a deep, rich sable.'' 
+#{{Icehockey}} The [[stastistical] combination of [[goal]]s and [[assist]]s.
+#:''The player had one goal and two assists for three points in that game.''
+
+====Synonyms====
+*(''location or place''): [[location]], [[place]], [[position]], [[spot]]
+*(''particular moment in an event or occurrence''): [[moment]], [[time]]
+*(''sharp tip''): [[end]], [[tip]]
+*(''arithmetic symbol''): [[decimal point]] (''name of the symbol; not used when reading  decimal fractions aloud'')
+*(''opinion''): [[opinion]], [[point of view]], [[view]], [[viewpoint]]
+*(''unit of measure of success or failure''): [[mark]] (''in a competition'')
+*(''colo(u)r of extremities of an animal''):
+*(''in ice hockey''):
+
+====Derived terms====
+*[[break point]]
+*[[decimal point]]
 *[[Didot point]]
+*[[match point]]
 *[[Pica point]]
+*[[pointer]]
+*[[point of fact]]
+*[[point of sale]]
+*[[pointy]]
+*[[what's the point]]?
 
 ====Translations====
 
+'''location or place'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: point ''m''
+*Italian: [[punto]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+'''particular moment in an event or occurrence'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+'''sharp tip'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[pointe]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Spanish: [[punta]] ''f''
+|}
+|}
+ 
+'''arithmetic symbol''' <br>
+''Note: many languages use a comma (',') rather than a dot as a decimal point, and hence the translations into these languages reflect this.''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[virgule]] ''f''
+*Italian: [[virgola]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+'''opinion'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[point de vue]] ''m'', [[avis]] ''m'', [[opinion#French|opinion]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+'''unit of measure of success or failure in a game or competition'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: point ''m''
+*Italian: [[punto]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+'''colo(u)r of extremities of an animal'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+'''in ice hockey'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+ 
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into
+the tables above.-->
+{{checktrans}}
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above, removing any numbers.  Any numbering associating
+translations with definitions is unreliable.
+
 *Dutch : [[punt]] ''n'' (1,2)
 *[[Finnish]]: [[piste]] (1, 3), [[kärki]] (2)
-*French: point ''m'' (1,2)
 *German: [[Punkt]] ''m'' (1, 2)
 *Hebrew: [[נקודה]] ''f''
 *[[Ido]]: [[punto]]
 *[[Interlingua]]: [[puncto]] (1), [[puncta]] (2)
 *{{ga}}: [[pointe]]
-*Italian: [[punto]], [[virgola]], [[punta]]
 *Japanese: [[点]] ([[てん]], ten)
 *Portuguese: [[ponto]] ''m'' (1), [[ponta]] ''f'' (2)
-*Spanish: [[punto]] ''m''
 *Swedish: [[punkt]] ''c'' (1,4) (''note:Swedish uses ''',''' to separate the fraction''), [[decimalpunkt]] ''c'' (4), [[spets]] ''c'' (3), [[poäng]] ''n'' (5,6)
 
-===Verb===
-'''to point'''  ([[points]], [[pointed]], [[pointing]])
-#To indicate a direction or show something.
+===Intransitive verb===
+'''to point'''  ('''[[points]]''', '''[[pointing]]''', '''[[pointed]]''')
 
-====Related terms====
+#To extend the [[index finger]] in the direction of something in order to show where it is or to draw attention to it.
+
+====Derived terms====
 *[[point at]]
 *[[point out]]
 
@@ -56,26 +201,25 @@
 *Portuguese: [[apontar]] [[para]], [[indicar]]
 *Spanish: [[indicar]]
 *Swedish: [[peka]], [[peka ut]]
-----
 
+----
 ==French==
 ===Noun===
 '''point''' ''m''
 
-# A location or place.
-# The sharp tip of an object.
+#point (''location or place'')
 
 ====Related terms====
 *[[à point]]
 
-====Translations====
-
-*English: point (1,2)
-
 ===Adverb===
-'''ne point'''
+'''ne ... point'''
 
-# (''In literary use'') Not.  Equivalent to '''ne [[pas]]'''.
+#(''literary'') [[not]]
+#:''Ne craignez point'' - Fear not
+
+====Synonyms====
+'''ne ... [[pas]]'''
 
 [[et:Point]]
 [[ru:Point]]
