/* Noun */ +extra gloss and der <point#1794>

--- a/wiki/point.wikitext
+++ b/wiki/point.wikitext
@@ -207,10 +207,12 @@ translations with definitions is unreliable.
 ===Noun===
 '''point''' ''m''
 
-#point (''location or place'')
+#point (''location or place, unit of success or failure in a game or competition'')
 
-====Related terms====
+===Derived terms===
 *[[à point]]
+*[[point de vue]]
+*[[un point c'est tout]]
 
 ===Adverb===
 '''ne ... point'''
