sv trans cleaned up <point#1794>

--- a/wiki/point.wikitext
+++ b/wiki/point.wikitext
@@ -54,6 +54,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[punkt]] ''c'', [[plats]] ''c''
 |}
 |}
  
@@ -84,6 +85,7 @@
 {|
 <!--Put translations for languages from J to Z here-->
 *Spanish: [[punta]] ''f''
+*Swedish: [[spets]] ''c''
 |}
 |}
  
@@ -101,6 +103,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[punkt]] ''c'', [[decimalpunkt]] ''c'' (''note: Swedish uses ',' as decimal marker. See [[komma]], [[decimalkomma]]'')
 |}
 |}
  
@@ -116,6 +119,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[poäng]] ''c''
 |}
 |}
  
@@ -132,6 +136,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[poäng]] ''n''
 |}
 |}
  
@@ -160,6 +165,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[poäng]] ''n''
 |}
 |}
  
@@ -179,7 +185,7 @@ translations with definitions is unreliable.
 *{{ga}}: [[pointe]]
 *Japanese: [[点]] ([[てん]], ten)
 *Portuguese: [[ponto]] ''m'' (1), [[ponta]] ''f'' (2)
-*Swedish: [[punkt]] ''c'' (1,4) (''note:Swedish uses ''',''' to separate the fraction''), [[decimalpunkt]] ''c'' (4), [[spets]] ''c'' (3), [[poäng]] ''n'' (5,6)
+
 
 ===Intransitive verb===
 '''to point'''  ('''[[points]]''', '''[[pointing]]''', '''[[pointed]]''')
