--- a/wiki/point.wikitext
+++ b/wiki/point.wikitext
@@ -103,7 +103,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
-*Swedish: [[punkt]] ''c'', [[decimalpunkt]] ''c'' (''note: Swedish uses ',' as decimal marker. See [[komma]], [[decimalkomma]]'')
+*Swedish: [[punkt]] ''c'' (''note: Swedish uses ',' as decimal marker. See [[komma]]'')
 |}
 |}
  
@@ -185,7 +185,6 @@ translations with definitions is unreliable.
 *{{ga}}: [[pointe]]
 *Japanese: [[点]] ([[てん]], ten)
 *Portuguese: [[ponto]] ''m'' (1), [[ponta]] ''f'' (2)
-
 
 ===Intransitive verb===
 '''to point'''  ('''[[points]]''', '''[[pointing]]''', '''[[pointed]]''')
