fmt; +it <full stop#2367>

--- a/wiki/full_stop.wikitext
+++ b/wiki/full_stop.wikitext
@@ -1,23 +1,34 @@
 ==English==
-===Interjection===
-'''full stop'''
-# (UK; for emphasis): and nothing else; and nothing less
-:''We need more people to come on IRC '''full stop''', really.''
 ===Noun===
-'''[[full]] [[stop]]'''
-# (''British'', ''Aust'') [[Punctuation]] [[mark]] (.) indicating the end of a sentence or marking an abbreviation.
+'''[[full]] [[stop]]''' (''plural'' '''full stops''')
+
+#(''UK, Australia'') The [[punctuation mark]] ('.') indicating the end of a sentence or marking an abbreviation.
 
 ====Synonyms====
-*[[period]] (''US'')
-=== Related terms ===
-'''full-stop landing''' ''(aeronautical)''
-* aircraft landing to a '''full-stop''' (rather than a [[go-around]] or touch-and-go)
+*(''indicating end of sentence''): [[period]] (''US'')
+*(''marking an abbreviation'') [[dot]], [[point]]
+
 ====Translations====
 *Bulgarian: [[точка]] ''f''
 *Danish: [[punktum]] ''n''
 *Dutch: [[punt]]
-*Finnish: [[piste]]
-*French: [[point]] ''m''
+*Finnish: [[piste#Finnish|piste]]
+*French: [[point#French|point]] ''m''
+*Italian: [[punto]] ''m''
 *Swedish: [[punkt]] ''c''
+
+==== Derived terms ===
+*[[full-stop landing]]<!--move this to its own entry:
+''(aeronautical)'' aircraft landing to a '''full-stop''' (rather than a [[go-around]] or touch-and-go)
+-->
+
+===Interjection===
+'''full stop'''
+
+#(''UK'') And nothing less.
+:''We need more people to join IRC, '''full stop'''.''
+
+====Synonyms====
+*and that's [[final]], and [[that's that]], [[it's as simple as that]], [[period]] (''US'')
 
 {{Punctuation}}
