sv <decimal point#63921>

--- a/wiki/decimal_point.wikitext
+++ b/wiki/decimal_point.wikitext
@@ -22,7 +22,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
-*Swedish: [[decimalpunkt]] ''c'' (''Note: Swedish uses ',' for the decimal separator. See [[decimalkomma]].'')
+*Swedish: [[decimalpunkt]] ''c'' (''Note: Swedish uses the comma (,) for the decimal separator. See [[decimalkomma]].'')
 |}
 |}
 
