--- a/wiki/forty-one.wikitext
+++ b/wiki/forty-one.wikitext
@@ -11,6 +11,6 @@
 *[[Italian]]: quarantuno
 *[[Latin]]: quadraginta unus
 *[[Sanskrit]]: ékacatvaari''m''shat
-*[[Spanish]]: cuarentaiuno
+*[[Spanish]]: cuarenta y uno
 
 [[Category:English cardinal numbers]]
