sv <full stop#2367>

--- a/wiki/full_stop.wikitext
+++ b/wiki/full_stop.wikitext
@@ -17,7 +17,7 @@
 *Italian: [[punto]] ''m''
 *Swedish: [[punkt]] ''c''
 
-==== Derived terms ===
+==== Derived terms ====
 *[[full-stop landing]]<!--move this to its own entry:
 ''(aeronautical)'' aircraft landing to a '''full-stop''' (rather than a [[go-around]] or touch-and-go)
 -->
@@ -30,5 +30,8 @@
 
 ====Synonyms====
 *and that's [[final]], and [[that's that]], [[it's as simple as that]], [[period]] (''US'')
+
+====Translations====
+*Swedish: [[och därmed basta]]!
 
 {{Punctuation}}
