one more sv <full stop#2367>

--- a/wiki/full_stop.wikitext
+++ b/wiki/full_stop.wikitext
@@ -32,6 +32,6 @@
 *and that's [[final]], and [[that's that]], [[it's as simple as that]], [[period]] (''US'')
 
 ====Translations====
-*Swedish: [[och därmed basta]]!
+*Swedish: [[och därmed basta]]!, [[punkt slut]]
 
 {{Punctuation}}
