wikification <sex on legs#99289>

--- a/wiki/sex_on_legs.wikitext
+++ b/wiki/sex_on_legs.wikitext
@@ -1,8 +1,8 @@
 ==English==
 ===Noun phrase===
-'''sex on legs''' (''[[uncountable]]'')
+'''[[sex]] on [[leg]]s''' (''[[uncountable]]'')
 
-#A person or persons considered to be very sexually attractive.
+#A person or persons considered to be very [[sexual]]ly [[attractive]].
 #:''She thinks David Beckham is sex on legs.''
 
 ====Synonyms====
