robot  Adding:fr <magma#60591>

--- a/wiki/magma.wikitext
+++ b/wiki/magma.wikitext
@@ -6,5 +6,7 @@
 
 #The molten matter within the earth, the source of the material of lava flows, dikes of eruptive rocks, etc.
 
-[[pl:Magma]]
 [[Category:Greek derivations]]
+
+[[fr:magma]]
+[[pl:Magma]]
