robot  Adding:fi <magic#23710>

--- a/wiki/magic.wikitext
+++ b/wiki/magic.wikitext
@@ -94,6 +94,8 @@ French '''[[magique]]''', reborrowed from Latin '''[[magice]]''', borrowed from 
 *[[black magic]]
 *[[magic numbers]] = constants used to identify certain file types.
 
+[[Category:Greek derivations]]
+
 [[it:magic]]
 [[pl:Magic]]
-[[Category:Greek derivations]]
+[[fi:Magic]]
