robot  Adding:fi <magazine#37856>

--- a/wiki/magazine.wikitext
+++ b/wiki/magazine.wikitext
@@ -47,7 +47,8 @@ mag·a·zine
 
 # plural of [[Magazin]]
 
-[[et:magazine]]
+[[et:Magazine]]
 [[fr:magazine]]
 [[it:magazine]]
 [[ro:Magazine]]
+[[fi:Magazine]]
