--- a/wiki/easy.wikitext
+++ b/wiki/easy.wikitext
@@ -18,6 +18,7 @@
 *[[Danish]]: let
 *[[Dutch]]: makkelijk, gemakkelijk
 *[[Esperanto]] facila
+*[[Finnish]]: helppo
 *[[French]]: facile
 *[[German]]: leicht, einfach
 *[[Greek]]: εύκολο (eúkolo)
