--- a/wiki/%D1%83%D1%81%D1%82%D1%83%D0%BF%D0%B0%D1%82%D1%8C.wikitext
+++ b/wiki/%D1%83%D1%81%D1%82%D1%83%D0%BF%D0%B0%D1%82%D1%8C.wikitext
@@ -4,12 +4,12 @@
 '''уступать''' (ustupát’) ''[[impf.]]'', уступить (ustupít’) ''[[pf.]]''
 :''(object in the [[accusative case]], receiver in the [[dative case]])''
 
-# to cede
+# to [[cede]]
 # to let have
-#:[[Я]] [[вы|вам]] уступлю [[книгу]] [[за]] [[рубль|рублей]] [[двести]] (ja vam ustúplju knígu za rubléj dvésti) — ''I’ll let you have the book for around two hundred roubles.''
-# to yield
+#:[[Я]] [[вы|вам]] уступлю [[книга|книгу]] [[за]] [[рубль|рублей]] [[двести]] (ja vam ustúplju knígu za rubléj dvésti) — ''I’ll let you have the book for around two hundred roubles.''
+# to [[yield]]
 # to be inferior to ''(+ [[dative case]])''
 #:[[Он]] [[никто|никому]] [[не]] уступит [[в]] [[этот|этом]] [[отношение|отношении]] (on nikomú ne ustúpit v étom otnošénii) — ''He is second to none in this regard.''
 # to [[sell]]
 # to [[discount]], to [[abate]]
-#:[[Я]] [[не]] уступлю [[ни]] [[копейка|копейки]]! (ja ne ustúplju ni kopéjki) — ''I won’t take a penny less!''
+#:[[Они]] [[не]] уступят [[ни]] [[копейка|копейки]]! (oní ne ustúpjat ni kopéjki) — ''They won’t take one cent less!''
