--- a/wiki/bowl_a_googly.wikitext
+++ b/wiki/bowl_a_googly.wikitext
@@ -1,11 +1,22 @@
 ==English==
+===Etymology===
+From the cricket term
 
-===Phrasal verb===
-'''[[bowl]] a [[googlie]]'''
-#(''cricket'') to [[bowl]] a [[googlie]]
-#{{idiom}} to [[surprise]]; to [[introduce]] something [[unexpected]], [[underhand]] or requiring a [[quick]] [[reaction]] or [[correction]]
-#:''Fred '''bowled me a googlie''' when he asked me to explain those statistics in the meeting.''
+===Transitive phrasal verb===
+'''to [[bowl]] a [[googly]]''' ('''bowls a googly''', '''bowling a googly''', '''bowled a googly''')
+
+#(''figurative'') to [[surprise]] (someone); to [[introduce]] (to someone) something [[unexpected]], [[underhand]] or requiring a [[quick]] [[reaction]] or [[correction]].
+#:''Fred '''bowled me a googly''' when he asked me to explain those statistics in the meeting.''
+
+====Usage notes====
+*The object of '''bowl a googly''' is put immediately after "bowl" (as in the example given here).
+
+====Synonyms====
+*[[catch unawares]]
+*[[catch offguard]]
 
 ===See also===
 *[[throw for a loop]]
 *[[throw somebody a curve]]
+
+{{rfc}}
