robot  Adding:et <maire#33314>

--- a/wiki/maire.wikitext
+++ b/wiki/maire.wikitext
@@ -13,4 +13,5 @@ Old French [[maire]], from Latin [[maior]], "elder".
 '''maire''' ''m'' (''plural'' '''maires''')
 #[[mayor]]
 
+[[et:Maire]]
 [[fr:maire]]
