--- a/wiki/maintainer.wikitext
+++ b/wiki/maintainer.wikitext
@@ -4,3 +4,5 @@
 # a person who does [[maintenance]] work
 #(''dentistry'') a [[device]] used to keep [[teeth]] in a given [[position]]
 [[category:English nouns]]
+
+[[it:maintainer]]
