robot  Adding:hu,sv <maio#84036>

--- a/wiki/maio.wikitext
+++ b/wiki/maio.wikitext
@@ -8,6 +8,8 @@
 [[janeiro]], [[fevereiro]], [[março]], [[abril]], [[maio]], [[junho]], [[julho]], [[agosto]], [[setembro]], [[outubro]], [[novembro]], [[dezembro]]
 
 [[gl:Maio]]
+[[hu:maio]]
 [[nl:maio]]
 [[pl:Maio]]
 [[pt:Maio]]
+[[sv:maio]]
