fmt; moved content here from "googlie"; cleaned up <googly#53473>

--- a/wiki/googly.wikitext
+++ b/wiki/googly.wikitext
@@ -1,23 +1,35 @@
 ==English==
 ===Noun===
-'''googly'''
-# {{Cricket}} A ball, bowled by a [[leg break]] bowler, that [[spin]]s from [[off]] to [[leg]] (to a [[right handed]] [[batsman]]), [[unlike]] a [[normal]] leg-break [[delivery]].
+'''googly''' (''plural'' '''googlies''')
+
+# {{Cricket}} A ball, bowled by a [[leg break]] bowler, that [[spin]]s from [[off]] to [[leg]] (to a [[right-handed]] [[batsman]]), [[unlike]] a [[normal]] leg-break [[delivery]].
+
 ====Synonyms====
 *[[bosie]]
 *[[wrong 'un]]
-====See also====
+
+===Derived terms===
+*[[bowl a googly]]
+
+===See also===
 *[[chinaman]]
+*[[cutter]]
+*[[full toss]]
+*[[inswing]]
+*[[leg break]]
+*[[off-break]]
+*[[outswing]]
 *[[screwball grip]]
+*[[seamer]]
+*[[yorker]]
 
 ===Adjective===
 '''googly'''
-#bulging
 
-===Related terms===
-
-*[[googly eyes]]
+#Of the eyes, [[bulge|bulging]] out of pleasure.
 
 ===See also===
-*[[googlie]]
+*[[googly-eyed]]
+*[[googly eyes]]
 *[[google]]
 *[[googol]]
