fmt <googly eyes#53475>

--- a/wiki/googly_eyes.wikitext
+++ b/wiki/googly_eyes.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Noun===
-'''googly eyes'''
+===Noun phrase===
+'''[[googly]] [[eye]]s''' ''plural''
 
-#bulging eyes on a toy, doll etc. often with moving [[pupil]]s
+#[[bulge|Bulging]] eyes on a toy, doll, etc., often with moving [[pupil]]s.
