+compar & superl <googly#53473>

--- a/wiki/googly.wikitext
+++ b/wiki/googly.wikitext
@@ -24,9 +24,9 @@
 *[[yorker]]
 
 ===Adjective===
-'''googly'''
+'''googly''' ({{compar}} '''googlier''', {{superl}} '''googliest''')
 
-#Of the eyes, [[bulge|bulging]] out of pleasure.
+#Of the eyes, [[bulge|bulging]].
 
 ===See also===
 *[[googly-eyed]]
