robot  Adding:pl <make ends meet#94579>

--- a/wiki/make_ends_meet.wikitext
+++ b/wiki/make_ends_meet.wikitext
@@ -5,3 +5,5 @@
 #:''It is hard for someone to '''make ends meet''' these days on a single income.''
 === Translations ===
 *Russian: [[сводить концы с концами]]
+
+[[pl:Make ends meet]]
