probable user page - replaced with proper entry and moved content to contributor's talk page <Terrence#99259>

--- a/wiki/Terrence.wikitext
+++ b/wiki/Terrence.wikitext
@@ -1,9 +1,5 @@
-   Terrence Charles Miller
+==English==
+===Proper noun===
+'''Terrence'''
 
- 
- Not just any name. But mine. Terrence, a male gendered name rooted in Latin to mean Tender,Good, Gracious. Charles which is also male gendered is Latin,German and French meaning Manly, Full grown.  
-  My surname Miller has it's Origin: English. The definitions are as follows: 
-Definition: 1- Usually an occupational surname referring to a person who owned or worked in a grain mill. 2- Could also possibly be derived in some instances from the Gaelic words "meillear," having large lips; "malair," merchant; or "maillor," a man wearing armor or a soldier. 
-Alternate Surname Spellings: MILLAR, MILLS. There were 1,168,400 Millers online. 
-  I'm a mixed breed. My Mother is 1/4 Irish, German, Scots and Cherokee. The Indian Tribe is the only thing that I could really track down. Her Grandfather was born on the Oklahoma Osage Tribe Reservation in 1902. My father is African-American. Mulatto is the term used by some, and some people have coined their own categories. 
- Star golfer Tiger Woods, often identified as “black,” sees the world as more of a grey place. His mother is Thai, and his father’s family has a mix of African, Caucasian and Native American blood. He calls himself Cablinasian – a combination of letters that stands for Caucasian, black, Indian and Asian. Woods may stand alone on a fairway, but he’s got lots of company off it. As columnist George F. Will said a few years ago, “Trace your pedigree back far enough, you may find that you are an omelet of surprising ingredients.”
+#A variant of '''[[Terence]]'''.
