robot  Adding:pl,hu,hr,nl <malo#89909>

--- a/wiki/malo.wikitext
+++ b/wiki/malo.wikitext
@@ -1,3 +1,8 @@
 == Bosnian ==
 
 Masculine form of the noun [[Mali]], meaning baby or sweetheart.
+
+[[hr:malo]]
+[[hu:Malo]]
+[[nl:malo]]
+[[pl:Malo]]
