robot  Adding:it <malinger#98329>

--- a/wiki/malinger.wikitext
+++ b/wiki/malinger.wikitext
@@ -3,3 +3,5 @@
 '''malinger'''
 # to [[feign]] [[incapacitation]] in order to avoid work or [[obligation]]
 #: ''It is not uncommon on exam days for several students to [[malinger]] rather than prepare themselves.''
+
+[[it:malinger]]
