robot  Adding:it <malevolent#89424>

--- a/wiki/malevolent.wikitext
+++ b/wiki/malevolent.wikitext
@@ -16,3 +16,5 @@ Latin, from ''[[male]]'' 'ill' + ''[[velle]]'' 'to wish'.
 *[[malevolently]]
 
 [[Category:English adjectives]]
+
+[[it:malevolent]]
