cleaned up; +sexual sense (vt & refl v) <flick off#99228>

--- a/wiki/flick_off.wikitext
+++ b/wiki/flick_off.wikitext
@@ -1,9 +1,21 @@
-== English ==
-=== Verb ===
-'''to flick off'''
-#to [[flick off]] someone is to [[insult]] them by showing them the middle finger in some english speaking countries.
+==English==
+===Transitive phrasal verb===
+'''to [[flick]] off''' ('''flicks off''', '''flicking off''', '''flicked off''')
 
-=== Related terms ===
+#(''informal'') To [[insult]] (someone) by showing them the back of one's [[fist]] with the [[middle finger]] extended.
+#(''coarse slang'') To [[masturbate]] (a woman) by flicking her [[clitoris]] with one's finger or fingers.
+
+====Synonyms====
+*[[give the finger|give someone the finger]]
+
+====Usage notes====
+*The object of '''flick off''' is inserted between the component words, as in "flick someone off".
+
+===Reflexive verb===
+'''to flick oneself off'''
+
+#(''coarse slang'') Of a woman, to [[masturbate]] by flicking the [[clitoris]] with the finger or fingers.
+
+===See also===
 *[[flip off]]
 *[[flip the bird]]
-{{cleanup}}
