--- a/wiki/%D0%B1%D0%BE%D0%BB%D0%B5%D0%B5.wikitext
+++ b/wiki/%D0%B1%D0%BE%D0%BB%D0%B5%D0%B5.wikitext
@@ -1,4 +1,5 @@
 ==Russian==
+[[Category:Russian adverbs]]
 ===Adverb===
 '''[[более]]''' (bóleje)
 
@@ -11,7 +12,7 @@
 #: не более [[и]] [[не]] [[менее]], [[как]] — ''neither more nor less than'', ''[[no less than]]''
 #: [[тот|тем]] более — ''[[all the more]]'', ''[[especially]]''
 #: [[все|всё]] более [[и]] более (vsjo bóleje i bóleje) — ''[[more and more]]''
-# [[more than]] ''(+ genitive)''
+# [[more than]] ''(+ [[genitive case]])''
 #: более [[всего]] (vsevó) — ''[[most of all]]''
 #: более [[тот|того]] (tovó) — ''and [[what]] is [[more]]''
 
