robot  Adding:pl <mandibula#94057>

--- a/wiki/mandibula.wikitext
+++ b/wiki/mandibula.wikitext
@@ -20,3 +20,5 @@ From [[mandere]]
 # [[jaw|Jaw]]
 
 [[Category:English nouns]][[Category:Latin derivations]][[Category:Latin nouns]]
+
+[[pl:Mandibula]]
