robot  Adding:it <mandatory#94865>

--- a/wiki/mandatory.wikitext
+++ b/wiki/mandatory.wikitext
@@ -6,3 +6,5 @@
 #[[obligatory]]; [[required]] or [[commanded]] by [[authority]]
 #* Attendance at a school is usually '''mandatory'''.
 #of, or relating to a [[mandate]]
+
+[[it:mandatory]]
