--- a/wiki/%D0%B4%D0%B0.wikitext
+++ b/wiki/%D0%B4%D0%B0.wikitext
@@ -1,6 +1,7 @@
 ==Russian==
 [[Category:Russian conjunctions]]
 [[Category:Russian interjections]]
+[[Category:Russian adverbs]]
 ===Adverb===
 '''да''' (da)
 
