robot  Adding:fi,pt <mann#1762>

--- a/wiki/mann.wikitext
+++ b/wiki/mann.wikitext
@@ -46,12 +46,6 @@ Common Germanic ''*manna-''.  See '''[[man]]'''.
 
 [[Category:German nouns]]
 
-[[de:Mann]]
-[[fr:Mann]]
-[[it:Mann]]
-[[la:Mann]]
-[[hu:Mann]]
-
 ==Norwegian==
 ===Noun===
 '''mann''' ''m'' (''plural:'' '''menn''')
@@ -60,3 +54,11 @@ Common Germanic ''*manna-''.  See '''[[man]]'''.
 #one's [[husband]]
 
 [[Category:Norwegian nouns]]
+
+[[de:Mann]]
+[[fr:Mann]]
+[[it:Mann]]
+[[la:Mann]]
+[[hu:Mann]]
+[[pt:Mann]]
+[[fi:Mann]]
