robot  Adding:nl <manifest#33678>

--- a/wiki/manifest.wikitext
+++ b/wiki/manifest.wikitext
@@ -60,3 +60,4 @@ Latin ''[[manifestus]], [[manufestus]]'' "palpable, manifest", from ''[[manus]]'
 # '''manifest'''
 
 [[it:manifest]]
+[[nl:manifest]]
