--- a/wiki/%D0%B4%D0%BE%D0%BC%D0%B0.wikitext
+++ b/wiki/%D0%B4%D0%BE%D0%BC%D0%B0.wikitext
@@ -1,4 +1,5 @@
 =={{ru}}==
+[[Category:Russian adverbs]]
 ===Adverb===
 '''до́ма''' (dóma) ''([[genitive case|genitive]] of '''[[дом]]''')''
 
@@ -6,5 +7,3 @@
 
 ===Quotations===
 * — Вот, Леночка, — сказала тётя, — я ухожу, а ты оставайся '''дома''' и будь умницей — Daniil Kharms, ''Рассказы для детей (Stories for Children)''
-
-[[Category:Russian nouns]]
