robot  Adding:pl,sv,de,et <marginal#93296>

--- a/wiki/marginal.wikitext
+++ b/wiki/marginal.wikitext
@@ -14,3 +14,8 @@
 #(''mostly British'') of a [[parliamentary]] [[constituency]] that needs few people to [[change]] their [[previous]] [[voting]] [[behaviour]] to change the previous [[result]]
 #* In Bristol West, Labour had a majority of only 1,000 so is highly '''marginal''' this time<!--- not a real example -->
 [[category:English adjectives]]
+
+[[de:marginal]]
+[[et:Marginal]]
+[[pl:Marginal]]
+[[sv:marginal]]
