/* Category:Russian adverbs */ <нет#50007>

--- a/wiki/%D0%BD%D0%B5%D1%82.wikitext
+++ b/wiki/%D0%BD%D0%B5%D1%82.wikitext
@@ -1,5 +1,5 @@
 ==Russian==
-[[Category:Russian language]]
+[[Category:Russian adverbs]]
 [[Category:Russian verbs]]
 ===Adverb===
 '''нет''' (net)
@@ -10,9 +10,9 @@
 ===Impersonal verb===
 '''нет''' (net, ''contraction of'' [[не]] + [[есть]]), нету (nétu, ''colloquial'')
 
-# there is/are no
+# there is no, there are no
 #:*[[Здесь]] нет [[дорога|дорог]] (zdes’ net doróg) — ''There are no roads here.''
-# is/are not
+# is not, are not
 #:*[[У]] [[я|меня]] нет [[книга|книг]] (u menjá net knig) — ''I have no books.''
 #:*[[он|Его]] нет (jevó net) — ''He’s not here.''
 
