/* Category:Russian adverbs */ <по-русски#43783>

--- a/wiki/%D0%BF%D0%BE-%D1%80%D1%83%D1%81%D1%81%D0%BA%D0%B8.wikitext
+++ b/wiki/%D0%BF%D0%BE-%D1%80%D1%83%D1%81%D1%81%D0%BA%D0%B8.wikitext
@@ -1,6 +1,7 @@
 ==Russian==
+[[Category:Russian adverbs]]
 ===Derivation===
-Adverbial form of [[русский]] (''rússkij''), "Russian".  
+Adverbial form of [[русский]] (''rússkij''), "Russian".
 
 ===Pronunciation===
 {| border=1 cellpadding=5
