robot  Adding:fi <marriage#38939>

--- a/wiki/marriage.wikitext
+++ b/wiki/marriage.wikitext
@@ -55,3 +55,4 @@ Middle English '''[[mariage]]''', from Old French '''[[mariage]]''', from '''[[m
 *[[group marriage]]
 
 [[it:marriage]]
+[[fi:Marriage]]
