robot  Adding:hu,fr <marzo#40671>

--- a/wiki/marzo.wikitext
+++ b/wiki/marzo.wikitext
@@ -7,8 +7,10 @@ From Latin ([[mensis]]) '''[[Martius]]''', (month) of the Roman god [[Mars]].
 
 #[[March]] (''the month'')
 
+[[fr:marzo]]
 [[gl:Marzo]]
 [[it:marzo]]
+[[hu:marzo]]
 [[nl:marzo]]
 [[ja:marzo]]
 [[pl:Marzo]]
