robot  Adding:fi <martin#47776>

--- a/wiki/martin.wikitext
+++ b/wiki/martin.wikitext
@@ -36,3 +36,5 @@ From Latin '''[[Martinus]]''', "of or like Mars" or "little Mars", from '''[[Mar
 ===See also===
 *[[w:Martin_(bird)|Wikipedia article on martins]]
 *[[w:Martin|Martin]] — Wikipedia disambiguation page, a list of topics referred to as "Martin"
+
+[[fi:Martin]]
