/* Category:Russian adverbs */ <хорошо#46361>

--- a/wiki/%D1%85%D0%BE%D1%80%D0%BE%D1%88%D0%BE.wikitext
+++ b/wiki/%D1%85%D0%BE%D1%80%D0%BE%D1%88%D0%BE.wikitext
@@ -1,5 +1,14 @@
 ==Russian==
-===Adjective===
-'''хорошо''' (khorosho)
+[[Category:Russian adverbs]]
+===Adverb===
+'''хорошо''' (khorošó)
 
-# [[good]]
+# [[well]]
+# [[all right]]!
+# [[okay]]!
+# [[good]]!
+#:[[он|Ему]] хорошо (emú khorošó) — ''He is well off.''
+#''(school marks)'' [[good]], [[B]]
+
+===See also===
+*[[хороший]]
