--- a/wiki/%D0%A5%D1%80%D0%B8%D1%81%D1%82%D0%BE%D1%81.wikitext
+++ b/wiki/%D0%A5%D1%80%D0%B8%D1%81%D1%82%D0%BE%D1%81.wikitext
@@ -1,5 +1,8 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
+'''Христос''' (Khristós) ''m'', Христа (Khristá) ''[[genitive case|genitive]]''
+
 #[[Christ]]
 
 [[it:Христос]]
