robot  Adding:gl,nl <mastitis#96926>

--- a/wiki/mastitis.wikitext
+++ b/wiki/mastitis.wikitext
@@ -5,3 +5,6 @@ From {{Gr.}} [[mastos]], "breast" + [[-itis]].
 ===Noun===
 '''mastitis''' {{wikipedia}}
 #[[inflammation|Inflammation ]] of a [[breast]] or [[udder]]
+
+[[gl:Mastitis]]
+[[nl:mastitis]]
