robot  Adding:zh <mathematics#51858>

--- a/wiki/mathematics.wikitext
+++ b/wiki/mathematics.wikitext
@@ -78,6 +78,8 @@ Greek ''[[μαθηματικός]]'' (mathematikós), fond of learning, from ''[
 *[http://planetmath.org PlanetMath.Org Encyclopedia]
 *[http://mathworld.wolfram.com Mathworld Encyclopedia]
 
+[[Category:Greek derivations]]
+
 [[it:mathematics]]
 [[ro:Mathematics]]
-[[Category:Greek derivations]]
+[[zh:Mathematics]]
