--- a/wiki/petard.wikitext
+++ b/wiki/petard.wikitext
@@ -1,10 +1,15 @@
 == English ==
 === Etymology ===
 [[Latin]]; '''''pedere''''' "to break wind" via [[Middle French]]; from '''''peter''''' "to break wind" from '''''pet''''' "expulsion of intestinal gas"
+
+=== Pronunciation ===
+*{{SAMPA}} /pE."tArd/
+*{{IPAlink}} {{IPA|/pɛ.'tɑɹd/}}
+
 ===Noun===
 #A hat shaped [[explosive]] device, now rarely used.
 #Anything potentially explosive in a non-literal sense 
-#: ''For tis the sport to haue the [[enginer]] / Hoist with his owne '''petar''''' - Hamlet.
+#: ''For tis the sport to haue the [[enginer]] / Hoist with his owne '''petar''''' - ''Hamlet'', [[Shakespeare]]
 #A loud firecracker
 
 === Usage ===
