--- a/wiki/%D1%86%D0%B5%D0%BD%D0%B0.wikitext
+++ b/wiki/%D1%86%D0%B5%D0%BD%D0%B0.wikitext
@@ -1,5 +1,39 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
-'''[[цена]]''' ''f''
+'''цена''' (tsená) ''f'', цены (tsény) ''pl''
 
-# [[price]]
+# [[price]], [[cost]]
+# [[worth]]
+# [[value]]
+
+===Declension===
+{| border="1" cellpadding="4" cellspacing="0"
+!
+! style="background-color: #EFEFFF" align="center"|[[singular]]
+! style="background-color: #EFEFFF" align="center"|[[plural]]
+|-
+! style="background-color: #FFFFE0" align="left"|[[nominative case|nominative]]
+| align="center"|{{Unicode|цена́}}
+| align="center"|{{Unicode|це́ны}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[genitive case|genitive]]
+| align="center"|{{Unicode|цены́}}
+| align="center"|{{Unicode|цен}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[dative case|dative]]
+| align="center"|{{Unicode|цене́}}
+| align="center"|{{Unicode|це́нам}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[accusative case|accusative]]
+| align="center"|{{Unicode|це́ну}}
+| align="center"|{{Unicode|це́ны}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[instrumental case|instrumental]]
+| align="center"|{{Unicode|цено́й, -о́ю}}
+| align="center"|{{Unicode|це́нами}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[prepositional case|prepositional]]
+| align="center"|{{Unicode|о цене́}}
+| align="center"|{{Unicode|о це́нах}}
+|}
