robot  Adding:fr <Md#33293>

--- a/wiki/MD.wikitext
+++ b/wiki/MD.wikitext
@@ -1,9 +1,6 @@
-{{-en-}}
+'''Md'''<br>{{chemistry}} symbol for [[mendelevium]]
+[[Category:Symbols]]
 
-==={{Abbreviation}}===
-#[[Maryland]], a {{USstate}}
-#symbol indicating a medical degree, [[physician]] or [[doctor]]
-#[[managing director]]
-#[[Mini Disc]]
-
-[[pl:MD]]
+[[fr:Md]]
+[[ja:Md]]
+[[pl:Md]]
